k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: usg-radius
  labels:
    name: usg-radius
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
